syntax = "proto3";

package test.foo.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/annotations.proto";

message FooKeys {
  option (j5.ext.v1.psm).entity_name = "foo";

  string foo_id = 1 [
    (j5.ext.v1.key).primary = true,
    (buf.validate.field).required = true,
    (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
  ];

  string bar_id = 2 [
    (j5.ext.v1.field).key.foreign = {
      package: "test.foo.v1"
      entity: "bar"
    },
    (j5.ext.v1.field).key.format = FORMAT_UUID
  ];
}

message FooState {
  FooKeys keys = 1 [(j5.ext.v1.field).object.flatten = true];

  FooStatus status = 2 [
    (buf.validate.field).required = true,
    (j5.list.v1.field).enum.filtering = {
      filterable: true
      default_filters: "FOO_STATUS_ACTIVE"
    }
  ];
  
  string name = 3 [(j5.list.v1.field).string.open_text.searching = {searchable: true}];
  Bar bar = 4;
  google.protobuf.Timestamp created_at = 5 [(j5.list.v1.field).timestamp = {
    filtering: {filterable: true}
    sorting: {
      default_sort: true
      sortable: true
    }
  }];
}

enum FooStatus {
  FOO_STATUS_UNSPECIFIED = 0;
  FOO_STATUS_ACTIVE = 1;
  FOO_STATUS_INACTIVE = 2;
}

// Comment on Bar
message Bar {
  option (j5.ext.v1.message).object = {
    polymorph_member: ["foobar"]
  };
  string id = 1 [(j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true];
  string field = 2 [(j5.list.v1.field).string.open_text.searching = {searchable: true}];
}

message FooEvent {
  option (j5.ext.v1.psm).entity_name = "foo";
  FooKeys keys = 1 [(j5.ext.v1.field).object.flatten = true];
  FooEventType event = 2 [(buf.validate.field).required = true];
  
  google.protobuf.Timestamp timestamp = 5 [(j5.list.v1.field).timestamp = {
    filtering: {filterable: true}
    sorting: {
      default_sort: true
      sortable: true
    }
  }];
}

message FooEventType {
  option (j5.ext.v1.message).oneof = {};

  oneof type {
    Created created = 1;
    Updated updated = 2;
  }

  // Comment on Created
  message Created {
    string field = 1;
  }

  // Comment on Updated
  message Updated {
    string field = 1;
  }
}
